--- a/html/changelog.html
+++ b/html/changelog.html
@@ -34,6 +34,45 @@
 		
 		<div class="commit sansserif">
 
+			<h2 class="date">07 May 2020</h2>
+			<h3 class="author">MalinaGirl updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Вернул ХоПу возможность становиться ТРЕЙТОРОМ!!1, что была у него нагло отнята.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Баффнул плазменный резак шахтёров в потолок. Теперь им проще как и породу копать, так и убивать.</li>
+			</ul>
+
+			<h3 class="author">Animesku updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил возможность смены цвета колготкам и женской блузке прямо в лодауте.</li>
+			</ul>
+
+			<h3 class="author">XmaebX updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил бутылку с чачей в барный автомат с алкоголем.</li>
+				<li class="tweak">Изменил спрайты веймедовских протезов, убрав торчащие из них штыри.</li>
+				<li class="tweak">Поднял цену заклинания no clothes у магов с 1 до 3 очков.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил древний баг, из-за которого мешки для трупов оказывались под ложем морга.</li>
+				<li class="bugfix">Исправил выдачу кодов от нюки в панели глав.</li>
+			</ul>
+
+			<h3 class="author">Shirlineyn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил баг со стиральной машиной, что отдавала вещи только со второго открытия.</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил описание одному парализирующему реагенту.</li>
+			</ul>
+
 			<h2 class="date">22 April 2020</h2>
 			<h3 class="author">Maxsc updated:</h3>
 			<ul class="changes bgimages16">
