--- a/html/changelog.html
+++ b/html/changelog.html
@@ -34,6 +34,49 @@
 		
 		<div class="commit sansserif">
 
+			<h2 class="date">11 May 2020</h2>
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Исправил забытую часть боёвки - броню. Теперь она в каком-то смысле по настоящему защищает от рвущихся артерий и шрапнели.</li>
+				<li class="tweak">Изменил механику разрыва лёгких от вакуума. Теперь это происходит не сразу, а постепенно, с накоплением урона по лёгким.</li>
+				<li class="tweak">Уменьшил время стана от надоевших всем появления гравитации и ветерка до 3 секунд.</li>
+				<li class="tweak">Значительно уменьшил шанс разрыва артерий и застревания шрапнели от резины и бинбенгов.</li>
+			</ul>
+
+			<h3 class="author">TheUnknownOne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил конфликт в законах емагнутого борга. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2285">issue #2285</a>)</li>
+				<li class="bugfix">Убрал возможность резать напольную решётку пустой и/или выключенной сваркой. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2299">issue #2299</a>)</li>
+				<li class="tweak">Актуализировал описание целей культа, заменив устаревшее название рун.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил АПЦ, что не отключались при гридчеке. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2279">issue #2279</a>)</li>
+				<li class="tweak">Изменил комфортную температуру скреллов, чтобы та соответствовала той, что нужна им для существования. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2158">issue #2158</a>)</li>
+				<li class="bugfix">Исправил баг с исчезновением спрайта трейторского предмета для вызова событий после использования. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2314">issue #2314</a>)</li>
+			</ul>
+
+			<h3 class="author">Animesku updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="imageadd">Поменял устаревшее описание килта и исправил внешний вид черных джинс на тонкоспрайтах.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Убрал возможность выпадения блоба игроку у которого уже имеется роль. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1626">issue #1626</a>)</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил специфичный баг с исчезновением спрайта сварочной маски. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1501">issue #1501</a>)</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил отображение остаточного времени таймера в рантайме оного. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2220">issue #2220</a>)</li>
+			</ul>
+
 			<h2 class="date">07 May 2020</h2>
 			<h3 class="author">MalinaGirl updated:</h3>
 			<ul class="changes bgimages16">
