--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,9 +30,23 @@
 		</td>
 	</tr>
 </table>
-		
-		
+
+
 		<div class="commit sansserif">
+
+			<h2 class="date">13 May 2020</h2>
+			<p><font size='2'><b>BYOND Beta, обновились до 513.</b> Начиная с этого обновления наши сервера работают на нестабильной версии BYOND 513. К сожалению, она очень плохо совмещается с клиентами старой версии, поэтому нам пришлось ограничить вход игроков с версией BYOND меньше 513.<br><br>Мы ожидаем появление новых багов, надеемся не очень критичных. Просим вас как можно быстрее сообщать нам обо всех проблемах связанных с переходом в канале <b>баги-и-идеи</b> дискорда или прямо на нашем гитхабе, постараемся стабилизировать билд после переката в кратчайшее время.</font></p>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Полностью изменил внешний вид окна лоадаута, чтобы он был более понятным и удобным.</li>
+				<li class="rscadd">Добавил превью персонажа и отдельных предметов в окно лоадаута.</li>
+				<li class="rscadd">Добавил отображение количества опиксов игрока и его тир патреона в окно лоадаута.</li>
+				<li class="rscadd">Добавил отображение аксессуаров на превью персонажа.</li>
+				<li class="rscadd">Перенес в лоадаут платные предметы из донат-панели. У таких предметов есть предпросмотр перед покупкой и возможность их купить. Покупаются предметы навсегда.</li>
+				<li class="rscadd">Добавил окно информации о донатах + починил кнопку Donations в основном интерфейсе.</li>
+				<li class="bugfix">Исправил множество мелких багов лоадаута.</li>
+			</ul>
 
 			<h2 class="date">11 May 2020</h2>
 			<h3 class="author">TobyThorne updated:</h3>
@@ -257,7 +271,7 @@
 				<li class="bugfix">Исправил частоту обновления солнечных панелей.</li>
 				<li class="bugfix">Исправил рантайм при работе who.</li>
 			</ul>
-			
+
 			<h3 class="author">DeltaEpsilon updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">Исправил слишком частое обновление зон при работе АПЦ.</li>
@@ -362,7 +376,7 @@
 			</ul>
 
 			<h2 class="date">4 March 2020</h2>
-			
+
 			<p><font size='2'><b>Stability Update.</b> В это обновление попало множество мелких технических исправлений, направленных на стабильность сервера, а также фиксы критических багов, вылезших после недавнего обновления. Если в последние пару дней вы испытывали какие-то новые проблемы, то они должны были решиться.</font></p>
 
 			<h3 class="author">TapKo4eB updated:</h3>
@@ -580,7 +594,7 @@
 				<li class="maptweak">[Обновление гетто] Переделал грузовую часть карго, значительно ужал её, добавил грузовой лифт, перенес склад в гетто, на месте склада сделал комнату отдыха.</li>
 				<li class="maptweak">[Обновление гетто] Переделал южную часть медблока, убрал палаты, офис психолога и туалеты на нижний уровень.</li>
 			</ul>
-				
+
 			<h3 class="author">TapKo4eB updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Добавил Crockett's Theme в ротацию лобби-музыки.</li>
@@ -592,7 +606,7 @@
 				<li class="bugfix">Вернул вывод в экзамайн характеристик предметов (размеры, вес). (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1089">issue #1089</a>)</li>
 				<li class="bugfix">Убрал звук дальнего взрыва для небольших взрывов. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1400">issue #1400</a>)</li>
 			</ul>
-				
+
 			<h3 class="author">JamsMor updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Изменил описание флавора, запретив писать ООЦ информацию в них.</li>
@@ -602,7 +616,7 @@
 			<ul class="changes bgimages16">
 				<li class="imageadd">Перерисовал халаты врачей и ученых. Теперь они застегиваются полностью! (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1344">issue #1344</a>)</li>
 			</ul>
-			
+
 			<h2 class="date">29 January 2020</h2>
 			<h3 class="author">Hekko4 updated:</h3>
 			<ul class="changes bgimages16">
@@ -1185,7 +1199,7 @@
 				<li class="maptweak">[Exodus]: Добавлен кейс с психоскопом к РД.</li>
 				<li class="maptweak">[Exodus]: Фикс научного шаттла и остальные минорные фиксы карты.</li>
 			</ul>
-			
+
 			<h2 class="date">29 October 2019</h2>
 			<h3 class="author">KreeperHLC updated:</h3>
 			<ul class="changes bgimages16">
@@ -1195,7 +1209,7 @@
 			<ul class="changes bgimages16">
 				<li class="bugfix">Пофикшен абуз привязывания к стульям во время контузии.</li>
 			</ul>
-			
+
 			<h2 class="date">28 October 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
@@ -1206,13 +1220,13 @@
 				<li class="tweak">Убран обжектив на кражу нейромода.</li>
 				<li class="bugfix">Фикс сообщений от психоскопа.</li>
 			</ul>
-			
+
 			<h2 class="date">27 October 2019</h2>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">Минорные фиксы психоскопа. Был вернут восьмой IE для tgui.</li>
 			</ul>
-			
+
 			<h2 class="date">25 October 2019</h2>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
