--- a/html/changelog.html
+++ b/html/changelog.html
@@ -34,6 +34,54 @@
 
 		<div class="commit sansserif">
 
+			<h2 class="date">11 May 2020</h2>
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил вариации стандартного спрайта для всех типов боргов.</li>
+				<li class="rscadd">Добавил шприцы боргам-хирургам.</li>
+				<li class="rscadd">Добавил сварку, лампочко-заменятель, мыло и декомпилятор материалов стандартному боргу.</li>
+				<li class="rscadd">Добавил покрасчики пола и труб инженерным боргам.</li>
+				<li class="rscadd">Добавил сервисным киборгам синтезатор. Музыкальный.</li>
+				<li class="rscadd">Добавил боргам возможность чинить себя сваркой, с трёх секундной задержкой.</li>
+				<li class="tweak">Ограничил боргам возможность колоть космонавтиков шприцами на харм-интенте.</li>
+				<li class="rscadd">Добавил несколько новых голограмм для ИИ.</li>
+
+				<li class="rscadd">Добавил кучу новых мутаций растений для развлечения ботаников.<br><a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1216">Томаты убийцы в их числе, да.</a></li>
+				<li class="tweak">Бросок сочных плодов на пол теперь разливает имеющиеся внутри реагенты.</li>
+				<li class="bugfix">Исправил отсутствующие цвета у винограда, несуществующие спрайты у некоторых растений.</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофиксил неработующую боль, от которой даже стан от тазера не оказывал никакого эффекта. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2045">issue #2045</a>)</li>
+			</ul>
+
+			<h3 class="author">Shirlineyn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил для генокрада сохранение и перенос флавора жертвы при трансформации.<br>(<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/416">issue #416</a>, <a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2161">#2161</a>)</li>
+				<li class="bugfix">Окончательно починил работу буров у рипли.</li>
+			</ul>
+
+			<h3 class="author">hard-res3t updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил рецепт деклонера в протолате. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2338">issue #2338</a>)</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил отображение текста в превью нановорда. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2358">issue #2358</a>)</li>
+			</ul>
+
+			<h3 class="author">Wuattt updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Поменял сломанный рулон ленты под РнД на изоленту. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1526">issue #1526</a>)</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="wip">Минор квалити оф лайф жукбокс ченжес.</li>
+			</ul>
+
 			<h2 class="date">13 May 2020</h2>
 			<p><font size='2'><b>BYOND Beta, обновились до 513.</b> Начиная с этого обновления наши сервера работают на нестабильной версии BYOND 513. К сожалению, она очень плохо совмещается с клиентами старой версии, поэтому нам пришлось ограничить вход игроков с версией BYOND меньше 513.<br><br>Мы ожидаем появление новых багов, надеемся не очень критичных. Просим вас как можно быстрее сообщать нам обо всех проблемах связанных с переходом в канале <b>баги-и-идеи</b> дискорда или прямо на нашем гитхабе, постараемся стабилизировать билд после переката в кратчайшее время.</font></p>
 
