--- a/html/changelog.html
+++ b/html/changelog.html
@@ -34,6 +34,87 @@
 
 		<div class="commit sansserif">
 
+			<h2 class="date">23 May 2020</h2>
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил горячую клавишу включения блока на кнопку C.</li>
+				<li class="tweak">Изменил механику блоков, теперь они не отключаются при успешном блокировании атаки. Взамен активный блок ещё сильнее замедляет восстановление стамины.</li>
+				<li class="tweak">Энергомечи и энергощиты теперь полностью останавливают пули и лазеры при блокировании.</li>
+				<li class="rscadd">Добавил второй режим стрельбы для лазерных карабинов и пушек, стреляющий лазерными "пулями", ведущие себя собственно как и пули.</li>
+				<li class="tweak">Увеличил вместимость лазерных карабинов и лазерных пушек с 10 до 12 и с 6 до 8 соответственно.</li>
+				<li class="tweak">Добавил в качестве режима стрельбы стансферы для тазера охранного киборга.</li>
+				<li class="imageadd">Перерисовал спрайты станбатона, тазера и лазерного карабина для киборгов.</li>
+				<li class="imageadd">В принципе перерисовал спрайт лазерного карабина. За основу были взяты нынешние и беевские спрайты, с щепоткой старого-доброго буллапа.</li>
+				<li class="rscadd">Добавил индикатор боли в виде красного свечения вокруг индикатора здоровья. Индикатор здоровья пришлось вернуть к классическому виду.</li>
+				<li class="tweak">Добавил трейтий слот у киборгов для позднего спавна.</li>
+			</ul>
+
+			<h3 class="author">Shirlineyn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Вернул систему "классической сервировки" коктейлей. Теперь если в нужный стакан налить нужный напиток он приобритёт свой особый, старый, классический спрайт. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1144">issue #1144</a>)</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Русифицировал и упростил систему кодовых фраз у трейторов. Теперь при произнесении кодовой фразы (но не фразы ответа) та будет подсвечиваться в чате. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2242">issue #2242</a>)</li>
+				<li class="bugfix">Починил сохранение информации о pAI в настройках.</li>
+				<li class="bugfix">Исправил шанс случайного выпадения пола у новых персонажей, который подозрительно часто был женским.</li>
+			</ul>
+
+			<h3 class="author">kreeperHLC made, Shirlineyn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил новый интерфейс для ИИ с множеством удобных кнопочек. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1138">issue #1138</a>)</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил бесконечные боль и падения у космонавтов от пролитой на них кислоты. Также теперь вы теперь не будете падать замертво при превращении в скелета.</li>
+			</ul>
+
+			<h3 class="author">kobold updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Поменял местами кнопки выбора "Да" и "Нет" в окне приглашения в революцию. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2364">issue #2364</a>)</li>
+				<li class="tweak">Изменил минимальный возраст игровых персонажей до 18 лет.</li>
+			</ul>
+
+			<h3 class="author">Hekko4 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Разрешил призракам вселяться в пауков. Только на свой страх и риск. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1364">issue #1364</a>)</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил уточнение в окне флавора о запрете ввода OOC информации, которое было потеряно при переходе на 513 версию бъёнда.</li>
+				<li class="bugfix">Починил окончание раунда при победе блоба. Опять. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1201">issue #1201</a>)</li>
+			</ul>
+
+			<h3 class="author">hard-res3t updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Вернул потерянное названия у фертилизера. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2265">issue #2265</a>)</li>
+				<li class="bugfix">Исправил канал отображения интегральной камеры с тандердома на научный.</li>
+			</ul>
+
+			<h3 class="author">dominoCaesar updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Изменил рецепт чизкейка, дабы тот подходил под описание на вики. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1183">issue #1183</a>)</li>
+				<li class="bugfix">Убрал смешной запрет на использование невербальных языков с заклееным ртом. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1141">issue #1141</a>)</li>
+			</ul>
+
+			<h3 class="author">PlinHost updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил отображение кодировок в окнах предупреждения о важных ролях. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2415">issue #2415</a>)</li>
+			</ul>
+
+			<h3 class="author">Wuattt updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="soundadd">Из-за низкой слышимости увеличил громкость Final Coundown в жукбоксе. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1732">issue #1732</a>)</li>
+			</ul>
+
+			<h3 class="author">MrMagick2104 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил уровень исследований у subspace analyzer'а.</li>
+			</ul>
+
 			<h2 class="date">11 May 2020</h2>
 			<h3 class="author">TobyThorne updated:</h3>
 			<ul class="changes bgimages16">
