--- a/html/changelog.html
+++ b/html/changelog.html
@@ -46,7 +46,7 @@
 				<li class="imageadd">Перерисовал спрайты станбатона, тазера и лазерного карабина для киборгов.</li>
 				<li class="imageadd">В принципе перерисовал спрайт лазерного карабина. За основу были взяты нынешние и беевские спрайты, с щепоткой старого-доброго буллапа.</li>
 				<li class="rscadd">Добавил индикатор боли в виде красного свечения вокруг индикатора здоровья. Индикатор здоровья пришлось вернуть к классическому виду.</li>
-				<li class="tweak">Добавил трейтий слот у киборгов для позднего спавна.</li>
+				<li class="tweak">Добавил третий слот у киборгов для позднего спавна.</li>
 			</ul>
 
 			<h3 class="author">Shirlineyn updated:</h3>
@@ -115,7 +115,7 @@
 				<li class="bugfix">Исправил уровень исследований у subspace analyzer'а.</li>
 			</ul>
 
-			<h2 class="date">11 May 2020</h2>
+			<h2 class="date">14 May 2020</h2>
 			<h3 class="author">TobyThorne updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Добавил вариации стандартного спрайта для всех типов боргов.</li>
