--- a/html/changelog.html
+++ b/html/changelog.html
@@ -34,6 +34,59 @@
 
 		<div class="commit sansserif">
 
+			<h2 class="date">30 May 2020</h2>
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="wip">Добавил тонкоспрайт для мужского пола. Билд больше никогда не станет прежним.</li>
+				<li class="tweak">Запилил систему перегрева для advanced energy gun. Теперь он может и облучить всех вокруг, так и взорваться при чрезмерном использовании.</li>
+			</ul>
+
+			<h3 class="author">TheUnknownOne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Теперь стиральная машина может стирать нижнее бельё. Nuff said. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1627">issue #1627</a>)</li>
+			</ul>
+
+			<h3 class="author">XmaebX updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Вирусолог превратился в отдельную профессию с соответствующим доступом.</li>
+			</ul>
+
+			<h3 class="author">PlinHost updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил функцию отключения размытия при маштабировании в панель инструментов клиента.</li>
+			</ul>
+
+			<h3 class="author">dominoCaesar updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил прохождение луча эмиттера сквозь ноду блоба. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2365">issue #2365</a>)</li>
+				<li class="bugfix">Починил съехавший текст в распечатке медицинского сканера. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2400">issue #2400</a>)</li>
+				<li class="bugfix">Изменил рецепты тортов, дабы те подходили под руководство на вики. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1367">issue #1367</a>)</li>
+			</ul>
+
+			<h3 class="author">kobold updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Переделал базу воксов. Теперь она стала чуть просторней и удобней в использовании.</li>
+				<li class="tweak">Отключил сообщение о прибытии корабля торговцев и воксов.</li>
+				<li class="tweak">Запретил заход в раунд за уже существующего в нём персонажа.</li>
+				<li class="tweak">Теперь все новые персонажи вместо лысины будут получать короткую стрижку.</li>
+				<li class="tweak">Добавил урон музыкальным инструментам.</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил рантайм в фабрикаторе мехов. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1926">issue #1926</a>)</li>
+				<li class="bugfix">Исправил рантайм в логике археологии. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2503">issue #2503</a>)</li>
+				<li class="bugfix">Пофиксил рантайм в солнечном трекере на астероиде. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1927">issue #1927</a>)</li>
+				<li class="bugfix">Устранил рантайм в стенах у дропподов на казино-дереликте.</li>
+				<li class="bugfix">Избавился от рантайма в одном из неиспользуемых шаттлов.</li>
+				<li class="bugfix">Починил отвалившиеся звуки при выдалбливании статуи. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/2502">issue #2502</a>)</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscdel">Удалил дереликт Ля Мария в целях снижения нагрузки на сервер.</li>
+			</ul>
+
 			<h2 class="date">23 May 2020</h2>
 			<h3 class="author">TobyThorne updated:</h3>
 			<ul class="changes bgimages16">
