--- a/html/changelog.html
+++ b/html/changelog.html
@@ -34,6 +34,20 @@
 
 		<div class="commit sansserif">
 
+			<h2 class="date">14 June 2020</h2>
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил множество новых эффектов для галлюцинаций.</li>
+				<li class="rscadd">Добавил возможность упасть в мусорку при ударе об неё в состоянии алкогольного опьянения.</li>
+				<li class="bugfix">Исправил работу эффектов речи.</li>
+				<li class="bugfix">Пофиксил отображение содержимого книг созданных в переплёточной машине.</li>
+			</ul>
+
+			<h3 class="author">PlinHost updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Снова исправил невозможность сохранения ранее выбранного цвета ника.</li>
+			</ul>
+
 			<h2 class="date">07 June 2020</h2>
 			<h3 class="author">TobyThorne updated:</h3>
 			<ul class="changes bgimages16">
@@ -43,6 +57,7 @@
 					- При успешном блокировании атаки теперь появляется окно для удара.<br>
 					- Блокирование проджектайлов энергомечом не тратит стамину только в случае удержания меча в активной руке.<br>
 					- Добавлена разрушаемость для множества объектов, включая торговые автоматы, столы и прочее.<br>
+					- Теперь прямое нанесение перидаксона на орган будет как выводить его из крита, так и лечить.<br>
 					Полный список изменений можно найти под <a href="https://github.com/ChaoticOnyx/OnyxBay/pull/2506">пулл реквестом</a>.
 				</li>
 				<li class="tweak">Попутно внёс изменения в текущую систему медицины.<br>
