--- a/html/changelog.html
+++ b/html/changelog.html
@@ -34,6 +34,31 @@
 
 		<div class="commit sansserif">
 
+			<h2 class="date">20 June 2020</h2>
+			<h3 class="author">kobold updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил киборгам внешнее отображение выбранных модулей при экзамайне.</li>
+				<li class="maptweak">Убрал давно устаревшую новогоднюю ёлку у химии.</li>
+				<li class="maptweak">Поменял безризонную укреплённую стенку у той же химии на обычную.</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Переделал меню рисования мелком. Плюс, добавил возможность писать киррилицой.</li>
+				<li class="tweak">Существенно уменьшил эффект разложения речи в состоянии опьянения для большей читаемости.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Поменял способ нанесения урона плазмакуттером. Теперь у него имеются два режима стрельбы, один из которых работает на твёрдом фороне.</li>
+				<li class="rscdel">Убрал возможность получить плазмакуттер через шахтёрский раздатчик, как и выпилил плазмакуттер как модуль РиГа в принципе.</li>
+			</ul>
+
+			<h3 class="author">PlinHost updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил кресты на инженерах, что были видны в HUD очках.</li>
+			</ul>
+
 			<h2 class="date">14 June 2020</h2>
 			<h3 class="author">Pos13 updated:</h3>
 			<ul class="changes bgimages16">
