--- a/html/changelog.html
+++ b/html/changelog.html
@@ -33,6 +33,58 @@
 
 
 		<div class="commit sansserif">
+			<h2 class="date">20 July 2020</h2>
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Ребаланс карты. Порезаны избыточные ресурсы, баффнута EVA, переделан рандомный лут из техов.</li>
+			</ul>
+
+			<h3 class="author">kobold updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил в аплинк взрывные пакеты замаскированные под посылки.</li>
+				<li class="tweak">Приоритизировал загрузку чата при подключении.</li>
+			</ul>
+
+			<h3 class="author">Hekko4 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофиксил гостам смешную возможность менять объём переливания в емкостях.</li>
+			</ul>
+
+			<h3 class="author">eckff and Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Запилили в лодаут бумбокс и кассеты для патронов.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофиксил эмбиенсы в морге и тех тоннелях. Сделал эмбиенс в два раза тише.</li>
+				<li class="bugfix">Переработал инфест в надежде что он больше не сломается.</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил потерю свойств еды после обработки в кухонных аппаратах.</li>
+				<li class="bugfix">Пофиксил готовку симплмобов в кухонных аппаратах.</li>
+				<li class="bugfix">Исправил продолжение готовки после отключения электричества.</li>
+				<li class="bugfix">Убрал перехват фокуса при открытии большинства окон.</li>
+				<li class="bugfix">Убрал симплмобам (мыши, ящерицы и т.п.) возможность переворачивать столы.</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил больше вещей в донатную часть лодаута.</li>
+			</ul>
+
+			<h3 class="author">HentaiStorm updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил некорректную запись голоса диктофоном.</li>
+				<li class="bugfix">Починил работу хлорки в крови при количестве менее двух единиц.</li>
+			</ul>
+
+			<h3 class="author">Shirlineyn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Убрал симплмобам возможность баклить других мобов.</li>
+			</ul>
 
 			<h2 class="date">20 June 2020</h2>
 			<h3 class="author">kobold updated:</h3>
