--- a/html/changelog.html
+++ b/html/changelog.html
@@ -33,6 +33,44 @@
 
 
 		<div class="commit sansserif">
+			<h2 class="date">03 August 2020</h2>
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Массово переработал большинство видов брони.</li>
+				<li class="maptweak">Небольшие балансные изменения брига.</li>
+				<li class="rscadd">Добавил резиновых свинок в кабинет АВД и набор для дискуссий в карго.</li>
+				<li class="bugfix">Починил спавн инженеров.</li>
+			</ul>
+
+			<h3 class="author">Ein-Linet updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофиксил некорректное сообщение воксов об оставленных позади союзниках.</li>
+				<li class="bugfix">Пофиксил возможность сломать автолат спамом запросов.</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил механику интеграции вики-статей во внутриигровые книги.</li>
+				<li class="bugfix">Починил прилипание предметов из сумок к экрану.</li>
+			</ul>
+
+			<h3 class="author">Scadouge updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофиксил id растений, из-за которых все растения на карте могли превратиться в один тип.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил гринтекст у культа и нюкеров.</li>
+				<li class="tweak">Добавил задачи для ЕРТ.</li>
+				<li class="tweak">Добавил поддержку голосовых комманд на кириллице для репликатора.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил доступ у аиралярмов в гетто.</li>
+			</ul>
+
 			<h2 class="date">20 July 2020</h2>
 			<h3 class="author">TobyThorne updated:</h3>
 			<ul class="changes bgimages16">
@@ -67,7 +105,6 @@
 				<li class="bugfix">Пофиксил готовку симплмобов в кухонных аппаратах.</li>
 				<li class="bugfix">Исправил продолжение готовки после отключения электричества.</li>
 				<li class="bugfix">Убрал перехват фокуса при открытии большинства окон.</li>
-				<li class="bugfix">Убрал симплмобам (мыши, ящерицы и т.п.) возможность переворачивать столы.</li>
 			</ul>
 
 			<h3 class="author">Epicus updated:</h3>
@@ -79,6 +116,7 @@
 			<ul class="changes bgimages16">
 				<li class="bugfix">Исправил некорректную запись голоса диктофоном.</li>
 				<li class="bugfix">Починил работу хлорки в крови при количестве менее двух единиц.</li>
+				<li class="bugfix">Убрал симплмобам (мыши, ящерицы и т.п.) возможность переворачивать столы.</li>
 			</ul>
 
 			<h3 class="author">Shirlineyn updated:</h3>
