--- a/html/changelog.html
+++ b/html/changelog.html
@@ -33,6 +33,70 @@
 
 
 		<div class="commit sansserif">
+			<h2 class="date">18 August 2020</h2>
+			<h3 class="author">jammer312 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил в аплинк хамелеон-голограмму, способную принимать внешний вид любого предмета.</li>
+				<li class="rscadd">Теперь на кухонный крюк можно вешать не только мартышек.</li>
+				<li class="bugfix">Исправлена та самая фича с автопрерыванием напечатанного текста при получении удара.</li>
+			</ul>
+
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил у библии логику удара и сломанный текст.</li>
+				<li class="tweak">Запилил потребление стамины при блокировании пуль энергомечом, дабы никто не играл в бессмертных джедаев.</li>
+				<li class="bugfix">Пофиксил дюп табличек, что приводил к появлению уникальных игровых ситуаций.</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Множество, множество различных мелких и не только изменений станции, которые описаны конечно же не будут.</li>
+				<li class="maptweak">За исключением гетто, которое было порезано в крупном объёме.</li>
+			</ul>
+
+			<h3 class="author">yura-pepsicola updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил в аплинк уникальный набор чистильщика.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил научным киборгам апгрейд позволяющий использовать интегралки.</li>
+				<li class="rscadd">Киборги научились ставить на зарядку батарейки, а научный борг получил мультитул и провода.</li>
+				<li class="tweak">Blood boil руна теперь не абузится, дефайл и призыв Нар-Си запрещены за пределами станции.</li>
+			</ul>
+
+			<h3 class="author">Hekko4 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">У наушников глав появился "командный режим". Включается по альт-клику.</li>
+			</ul>
+			
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscdel">Ревёртнул свиней, ибо были добавлены без обоюдного согласия геймдизов.</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Удалил уникальную возможность ломать мультитулом несуществующие замки на ящиках.</li>
+				<li class="rscadd">Добавил целый вагон как различных способов поджечь сигарету, так и потушить её.</li>
+			</ul>
+	
+			<h3 class="author">Shirlineyn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил возможность засовывать людей в слиперы и криокамеры за километр.</li>
+			</ul>
+
+			<h3 class="author">Ein-Linet updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил сломанный автоскролл чата.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB and Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Больше никаких новичков с именами на киррилице, ибо теперь с киррилицой в имени нельзя зайти.</li>
+			</ul>
+
 			<h2 class="date">03 August 2020</h2>
 			<h3 class="author">TobyThorne updated:</h3>
 			<ul class="changes bgimages16">
