--- a/html/changelog.html
+++ b/html/changelog.html
@@ -33,6 +33,18 @@
 
 
 		<div class="commit sansserif">
+			<h2 class="date">19 August 2020</h2>
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Хотфикс режимов, которые не включались после вчерашней обновы.</li>
+				<li class="bugfix">Хотфикс кнопки Chat.</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Хотфикс курительной трубки.</li>
+			</ul>
+
 			<h2 class="date">18 August 2020</h2>
 			<h3 class="author">jammer312 updated:</h3>
 			<ul class="changes bgimages16">
