--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,6 +31,39 @@
 	</tr>
 </table>
 
+		<div class="commit sansserif">
+			<h2 class="date">31 August 2020</h2>
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Бесчисленные изменения некоторых спрайтов и различных мест на станции.</li>
+			</ul>
+
+			<h3 class="author">kemperhun updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В красном грабе можно перетаскивать космонавтов по вертикальной лестнице.</li>
+				<li class="tweak">Мыши теперь точно не смогут прокусить обувь.</li>
+			</ul>
+
+			<h3 class="author">jammer312 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил в преференсы включение хоткей-мода по умолчанию.</li>
+			</ul>
+
+			<h3 class="author">HentaiStorm updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил необходимость иметь подключённый печатник плат для отображения списка крафтов автолата.</li>
+				<li class="bugfix">Трейты речи больше не отрубаются от масок.</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил кнопку рандомизации лодаута в лодауте.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Перепилил способ работы длительности операций.</li>
+			</ul>
 
 		<div class="commit sansserif">
 			<h2 class="date">19 August 2020</h2>
