--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,35 @@
 </table>
 
 		<div class="commit sansserif">
+			<h2 class="date">12 September 2020</h2>
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">В кои-то веки исправил неисчезаемую темноту на шаттлах.</li>
+			</ul>
+
+			<h3 class="author">jammer312 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил ломающиеся спецсимволы в командных оповещениях.</li>
+				<li class="bugfix">Исправил бесконечную работу мясорубки.</li>
+				<li class="tweak">Поправил некоторые моменты в работе окна сея и форссея, оптимизировал несколько моментов связанных с тайпинг индикатором.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил сервисным боргам возможность открывать коробки с яйцами и ланчбоксы, держать фрукты.</li>
+				<li class="bugfix">Исправил отображение спрайтов пустых батареек при их печати в протолате.</li>
+			</ul>
+
+			<h3 class="author">BadRyuner updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил трейты на цветовую слепоту.</li>
+			</ul>
+
+			<h3 class="author">HentaiStorm updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил типографическую ошибку в описании белой шапки биани.</li>
+			</ul>
+
 			<h2 class="date">31 August 2020</h2>
 			<h3 class="author">TobyThorne updated:</h3>
 			<ul class="changes bgimages16">
@@ -51,7 +80,7 @@
 
 			<h3 class="author">HentaiStorm updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Исправил необходимость иметь подключённый печатник плат для отображения списка крафтов автолата.</li>
+				<li class="bugfix">Исправил необходимость иметь подключённый печатник плат для отображения списка крафтов протолата.</li>
 				<li class="bugfix">Трейты речи больше не отрубаются от масок.</li>
 			</ul>
 
